crates/evaluator/src/snapshots/kcl_evaluator__tests__quant_expr_7.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
b: []
