crates/evaluator/src/snapshots/kcl_evaluator__tests__schema_0.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
alice:
  name: Alice
  age: 10
bob:
  name: Bob
  age: 18
