crates/evaluator/src/snapshots/kcl_evaluator__tests__schema_2.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
VALUES_MAP:
  '1':
    attr1: foo
  '2':
    attr2: bar
config:
  provider: '1'
  values:
    attr1: foobar
  provider_values:
    attr1: foobar
