crates/evaluator/src/snapshots/kcl_evaluator__tests__selector_expr_0.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
a: v
b: v
c: null
