crates/evaluator/src/snapshots/kcl_evaluator__tests__subscript_expr_0.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
a:
- 3
- 2
- 1
b: 1
c: 3
