crates/evaluator/src/snapshots/kcl_evaluator__tests__unary_expr_3.snap
---
source: crates/evaluator/src/tests.rs
expression: "format! (\"{}\", evaluator.run().unwrap().1)"
---
a: true
